--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -42,7 +42,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <th>Nit Capacitador</th>
                   <th>Carnet Residente</th>
                   <th>Telefono Fijo Capacitador</th>
-                  <th>Movil Capacitador</th>
+                  <th> Telefono Movil Capacitador</th>
                   <th>Email Capacitador</th>
 <!--                  <th>Codigo Empleado</th>-->
                     <th></th>
