--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -24,8 +24,8 @@
                                 <th>Descripcion del Comité</th>
                                 <th>Nº de Acuerdo del Comité</th>
                                 <th>Miembros maximos del Comité</th>
-                                <th>Fecha Desde del Comité</th>
-                                <th>Fecha Hasta del Comité</th>
+                                <th>Fecha Inicio  Comité</th>
+                                <th>Fecha Fin del Comité</th>
                                 <th></th>
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
