--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -62,14 +62,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha Inicio del Comité:</label>
+                            <label class="col-sm-5 control-label">Fecha Inicio Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha Hasta del Comité :</label>
+                            <label class="col-sm-5 control-label">Fecha Fin Comité :</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">Fecha Hasta </p>
                             </div>
