--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -13,14 +13,16 @@
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
-         <div class="row text-center">
-                        <img src="../../static/image/costo.png" width="75" th:src="@{/image/costo.png}"/>
+         
         <div class="col-md-8">
-            
+           
+            <div class="row text-center">
+                        <img src="../../static/image/costo.png" width="75" th:src="@{/image/costo.png}"/>
+                         </div>
             <!--<h3 align="center">Consulta de Costos de Capacitaciones</h3>-->
             <div>
                 <form class="form-horizontal">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Código Costo de Capacitacion:</label>
                             <div class="col-sm-7">
