--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
@@ -34,7 +34,7 @@
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Dirección:</label>
+                            <label class="col-sm-5 control-label">Nombre Dirección  de la Necesidad de la Capacitacion:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.direccion}">DUI</p>
                             </div>
