--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -20,13 +20,14 @@
                             <tr>
                                 <th>Codigo de Asistencia de Capacitacion</th>
                                 <th>Capacitación a Asiganar</th>
-                                <th>Ubicacion Fisica de Capacitación</th>
                                 <th>Horas Recibidas de Capacitación</th>
                                 <th>Puesto Empleado</th>
                                 <th>Ubicación Física de Capacitación</th>
                                 <th>Telefono Empleado</th>
                                 <th>Correo Empleado</th>
-                                <th></th><th></th>
+                                <th></th>
+                              
+                              
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                             </tr>
@@ -34,12 +35,13 @@
                         <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
                             <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
                             <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
-                            <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica</td>
+                            
                             <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
-                             <td th:text="${asistenciacapacitacion.puesto}">Horas Recibidas</td>
+                             <td th:text="${asistenciacapacitacion.puesto}">Puesto Empleado</td>
                             <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
-                            <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
+                            <td th:text="${asistenciacapacitacion.telefono}">Telefono Empleado</td>
                             <td th:text="${asistenciacapacitacion.email}">Correo</td>
+                            
                             <td><a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a></td>
                             <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a></td>
                             <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
