--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -10,18 +10,17 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-md-3">
-            <th:block th:include="../templates/menu"></th:block>
-        </div>
-        <div >
-           <div class="row text-center">
-                <form class="form-horizontal">
-                    
-                    <!--<div class="row text-center">-->
-                         <img src="../../static/image/asistencia.png" width="75" th:src="@{/image/asistencia.png}"/></div>
-                   </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
+     <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+     <div class="col-md-9">
+          <div class="row text-center">
+                       <img src="../../static/image/asistencia.png" width="75" th:src="@{/image/asistencia.png}"/>
+                    </div>
+    
+        <div>
+            <form class="form-horizontal">
+              <div class="form-group">
                             <label class="col-sm-5 control-label">Código de Asistencia Capacitación :</label>
                             <div class="col-sm-6">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Código de Asistencia Capacitación</p>
@@ -48,7 +47,7 @@
                             </div>
                             </div>
                              <div class="form-group">
-                            <label class="col-sm-5 control-label">Ubicación físíca:</label>
+                            <label class="col-sm-5 control-label">Ubicación Física de Capacitación:</label>
                             <div class="col-sm-6">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
                             </div>
@@ -66,37 +65,17 @@
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.telefono}">Codigo de Capacitacion</p>
                                   </div>
                             </div>
-                         </div>
-                </form>
-                          
- <div class="form-group">
-                            <label class="col-sm-5 control-label">Correo Empleado:</label>
-                            <div class="col-sm-6">
-                                <p class="form-control-static" th:text="${asistenciacapacitacion.email}">Codigo de Capacitacion</p>
-                                  </div>
-                            </div>
-                        </div>
-                        
-                        
-
-                        
-                       
-                    </div> 
-
-
-                </form>
-                <div class="col-md-12">
+                
+            </form>
+            <div class="col-md-12">
                     <div class="row" align="center">
-                                       <a href="#" th:href="@{/asistenciacapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
+                       <a href="#" th:href="@{/asistenciacapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-12">
-            <th:block th:include="../templates/footer"></th:block>
-        </div>
+            
     </div>
-
+</div>
+    </div>
 </body>
 <script>
     $(document).ready(function () {
