--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -114,12 +114,12 @@
                                 <p class="form-control-static" th:text="${capacitacion.tipocapacitacion}">Tipo de Capacitación</p>
                             </div>
                         </div>
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-5 control-label">Estado de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.estadocapacitacion}">Estado de Capacitación</p>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre Capacitador:</label>
                             <div class="col-sm-7">
