--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -60,6 +60,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <label class="col-sm-3 control-label">Tema de Dominio(*):</label>
                         <div class="col-sm-8">
                             <select class="form-control"  required="true" th:field="*{temadominio}" >
+                                  <option value="0">-- Seleccione un un Tema--</option>
                              <option th:each="c:${dominio}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
 
 
@@ -77,6 +78,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="col-sm-8">
                             
                             <select class="form-control" required="true" th:field="*{institucioncapacitador}" >
+                                <option value="0">-- Seleccione una Institución--</option>
                                 <option th:each="c:${tinst}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
                             
                             </select>
@@ -92,6 +94,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="col-sm-8">
 
                             <select class="form-control" required="true" th:field="*{tipocapacitador}" >
+                                  <option value="0">-- Seleccione un tipo Capacitador--</option>
                                 <option th:each="c:${tipoCapacitador}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
 
                             </select>
@@ -107,6 +110,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="col-sm-8">
 
                             <select class="form-control" required="true"th:field="*{tipoagrupacion}" >
+                                <option value="0">-- Seleccione una agrupacion --</option>
                                   <option th:each="c:${tipoAgrupacion}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
 
                             </select>
