--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -50,13 +50,13 @@
                 </div>
                 
                         <div class="form-group">
-                    <label class="col-sm-6 control-label">Inicio Inasistencia:</label>
+                    <label class="col-sm-6 control-label">Fecha Inicio Inasistencia:</label>
                     <div class="col-sm-6">
                         <p class="" th:text="${#calendars.format(inasistencia.fechadesdeinasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
                          <div class="form-group">
-                    <label class="col-sm-6 control-label">Fin Inasistencia</label>
+                    <label class="col-sm-6 control-label">Fecha Fin Inasistencia</label>
                     <div class="col-sm-6">
                         <p class="" th:text="${#calendars.format(inasistencia.fechahastainasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
