--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -125,14 +125,14 @@
                                     <!--li sec:authorize="hasAnyRole('ROLE_OPERATIVO','ROLE_TACTICO')" ><a href="#" th:href="@{/otherreports/capacitadores/}">Reporte Capacitador</a></li-->
                                 </ul>
                             </li>
-                            <li sec:authorize="hasAnyRole('ROLE_OPERATIVO','ROLE_TACTICO')" class="dropdown">
+<!--                            <li sec:authorize="hasAnyRole('ROLE_OPERATIVO','ROLE_TACTICO')" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Niveles Escolares  <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span>
                                     <span class="glyphicon glyphicon-education"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/nivelescolaridades/new/nivelescolaridad}">Crear Niveles Escolares</a></li>
                                     <li sec:authorize="hasAnyRole('ROLE_OPERATIVO','ROLE_TACTICO')"><a href="#" th:href="@{/nivelescolaridades/}">Gestionar Niveles Escolares</a></li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li sec:authorize="hasAnyRole('ROLE_OPERATIVO','ROLE_TACTICO')" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Incapacidades <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
